--- a/Movies.ipynb
+++ b/Movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "id": "408bd8ac",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "id": "9387ed26",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "id": "27c57baa",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "id": "581be1ee",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "id": "d9f8eb88",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "id": "0b3066b7",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "1847                GoodFellas           8.2        3128"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "id": "195beed6",
    "metadata": {},
    "outputs": [],
@@ -213,17 +213,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "id": "24106132",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1['year'] = pd.DatetimeIndex(df1['release_date']).year"
+    "df1['year'] = pd.to_datetime(df1['release_date']).dt.year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "id": "a7ceabaf",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "id": "22dd4a70",
    "metadata": {},
    "outputs": [],
@@ -244,17 +244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "id": "bfeda6d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x216563f31f0>"
+       "<matplotlib.legend.Legend at 0x1e4ceb00520>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -272,7 +272,7 @@
    "source": [
     "fig = plt.figure()\n",
     "axes = fig.add_axes([0,0,1,1])\n",
-    "x = np.array(['2010','2011','2012','2013', '2014', '2015', '2016'])\n",
+    "x = df1.index\n",
     "formatter = plt.FuncFormatter(million)\n",
     "axes.yaxis.set_major_formatter(formatter)\n",
     "axes.bar(x,df1.revenue,label='revenue')\n",
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 68,
    "id": "a5a4b35f",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 69,
    "id": "a8bce4ec",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 70,
    "id": "95072d7d",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
        "[4803 rows x 19 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 71,
    "id": "156bf86a",
    "metadata": {},
    "outputs": [
@@ -762,7 +762,7 @@
        "Name: genres, dtype: int64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 72,
    "id": "a8663135",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
        "9           Foreign   83.000000"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 73,
    "id": "3f79b439",
    "metadata": {},
    "outputs": [],
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 74,
    "id": "04c6dab9",
    "metadata": {},
    "outputs": [
@@ -978,7 +978,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     },
